WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171285
CoreAudioCaptureSource::suspend is asserting too often
https://bugs.webkit.org/show_bug.cgi?id=171285
Summary
CoreAudioCaptureSource::suspend is asserting too often
youenn fablet
Reported
2017-04-25 13:11:43 PDT
ASSERT(m_ioUnit) may assert in valid cases, like when m_ioUnit is not started.
Attachments
Patch
(1.98 KB, patch)
2017-04-25 13:12 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-04-25 13:12:56 PDT
Created
attachment 308130
[details]
Patch
WebKit Commit Bot
Comment 2
2017-04-25 14:21:09 PDT
Comment on
attachment 308130
[details]
Patch Clearing flags on attachment: 308130 Committed
r215760
: <
http://trac.webkit.org/changeset/215760
>
WebKit Commit Bot
Comment 3
2017-04-25 14:21:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug