CoreAudioCaptureSource::suspend is asserting too often https://bugs.webkit.org/show_bug.cgi?id=171285

Patch by Youenn Fablet <youenn@apple.com> on 2017-04-25
Reviewed by Eric Carlson.

No change of behavior.

* platform/mediastream/mac/CoreAudioCaptureSource.cpp:
(WebCore::CoreAudioCaptureSource::suspend): Moving the assertion to where it might be useful.

Canonical link: https://commits.webkit.org/188163@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215760 268f45cc-cd09-0410-ab3c-d52691b4dbfc